--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.26.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.5"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
