--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "leaflet": "^1.7.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-leaflet": "^3.2.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.9",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
