--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.5",
     "react-stomp": "^5.1.0",
+    "react-toastify": "^8.2.0",
     "sockjs": "^0.3.24"
   },
   "devDependencies": {
