--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "formik": "^2.2.9",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "next": "latest",
