--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-leaflet": "^3.2.5",
     "react-stomp": "^5.1.0",
     "react-toastify": "^8.2.0",
-    "sockjs": "^0.3.24"
+    "sockjs": "^0.3.24",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.9",
