--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "next": "latest",
+    "next-pwa": "^5.5.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
