--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts","decs.d.ts", "**/*.ts", "**/*.tsx", "components/chatRoom.jsx"],
+  "include": ["next-env.d.ts","decs.d.ts", "**/*.ts", "**/*.tsx", "components/chatRoom.jsx", "pages/_document.js"],
   "exclude": ["node_modules"]
 }
