--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_BASE_URL = http://localhost:8080/
+NEXT_PUBLIC_BASE_DOWNLOAD_URL = http://localhost:8080/api/v1/files/download/
 NEXT_PUBLIC_POSITION_STACK_ACCESS_KEY = 15739e98314f3eb4c0916fb586254478
