--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-images-uploading": "^3.1.6",
     "react-leaflet": "^3.2.5",
     "react-stomp": "^5.1.0",
     "react-toastify": "^8.2.0",
